@@ -11,7 +11,11 @@ Limitations:
 
 
 Revision History:
-23-Jab-2002
+24-Jan-2002
+Additions:
+    1. You can now call HttpUnitOptions.setAutoRedirect( false ) to enable explicit testing of redirect requests.
+
+23-Jan-2002
 Problems fixed:
     1. Control characters and spaces created by breaking HTML in the middle are now trimmed from link parameters.
 
